--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   build-kernel:
     runs-on: ubuntu-latest
+    container:
+      image: debian:bookworm-slim
     timeout-minutes: 15
     permissions:
       contents: read
