--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   build-kernel:
     runs-on: ubuntu-latest
+    container: debian:bookworm-slim
     timeout-minutes: 15
     permissions:
       contents: read
@@ -23,7 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y --no-install-recommends bash ca-certificates git tar xz-utils wget build-essential flex bison libssl-dev libelf-dev bc
+        run: apt-get update && apt-get install -y --no-install-recommends bash ca-certificates git tar xz-utils wget build-essential flex bison libssl-dev libelf-dev bc
 
       - name: Clone Steam Link SDK
         run: git clone https://github.com/ValveSoftware/steamlink-sdk.git steamlink-sdk
