--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -15,19 +15,18 @@ jobs:
   build-kernel:
     runs-on: ubuntu-latest
     container: debian:bookworm-slim
-    timeout-minutes: 15
+    timeout-minutes: 30
     permissions:
       contents: read
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          submodules: "true"
 
       - name: Install dependencies
         run: apt-get update && apt-get install -y --no-install-recommends bash ca-certificates git tar xz-utils wget build-essential flex bison libssl-dev libelf-dev bc
-
-      - name: Clone Steam Link SDK
-        run: git clone https://github.com/ValveSoftware/steamlink-sdk.git steamlink-sdk
 
       - name: Download Kernel
         run: wget https://cdn.kernel.org/pub/linux/kernel/${{ inputs.kernel_branch }}/linux-${{ inputs.kernel_version }}.tar.xz
