--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -44,12 +44,12 @@ jobs:
 
       - name: Prepare Artifacts
         run: |
-          mv /tmp/build-modules/lib/modules/${{ inputs.kernel_version }} ../boot/
+          mv /tmp/build-modules/lib/modules/${{ inputs.kernel_version }}-steam ../boot/
           mv arch/arm/boot/zImage ../boot/
           mv arch/arm/boot/dts/berlin2cd-valve-steamlink.dtb
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: kernel-${{ inputs.kernel_version }}
+          name: kernel-${{ inputs.kernel_version }}-steam
           path: boot/
