--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -43,10 +43,11 @@ jobs:
         run: ./kernel/build.sh
 
       - name: Prepare Artifacts
+        working-directory: linux-${{ inputs.kernel_version }}
         run: |
           mv /tmp/build-modules/lib/modules/${{ inputs.kernel_version }}-steam ../boot/
           mv arch/arm/boot/zImage ../boot/
-          mv arch/arm/boot/dts/berlin2cd-valve-steamlink.dtb
+          mv arch/arm/boot/dts/berlin2cd-valve-steamlink.dtb ../boot/
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
