--- a/.github/workflows/build-debian-image.yml
+++ b/.github/workflows/build-debian-image.yml
@@ -66,7 +66,7 @@ jobs:
     needs: build-kernel
     steps:
       - name: Install dependencies
-        run: apt-get update && apt-get install -y --no-install-recommends bash parted xz-utils
+        run: sudo apt-get update && sudo apt-get install -y --no-install-recommends bash parted xz-utils
 
       - name: Checkout repository
         uses: actions/checkout@v2
