Remove sources.list.d

--- a/rootfs/Dockerfile
+++ b/rootfs/Dockerfile
@@ -2,6 +2,7 @@ ARG DEBIAN_VERSION=bullseye
 FROM docker.io/arm32v7/debian:$DEBIAN_VERSION-slim
 
 ARG KERNEL_VERSION=5.10.228
+ARG DEBIAN_VERSION=bullseye
 
 COPY ./kernel-$KERNEL_VERSION/ /boot/
 RUN mkdir -p /lib/modules && mv /boot/$KERNEL_VERSION-steam /lib/modules/$KERNEL_VERSION-steam
@@ -11,6 +12,7 @@ COPY ./rootfs/usr/bin/* /usr/bin/
 COPY ./rootfs/steamlink/ /steamlink/
 
 # Add repositories
+RUN rm -rf /etc/apt/sources.list.d/*
 RUN echo "deb http://deb.debian.org/debian $DEBIAN_VERSION main non-free-firmware" > /etc/apt/sources.list
 RUN echo "deb http://security.debian.org/debian-security $DEBIAN_VERSION-security main non-free-firmware" >> /etc/apt/sources.list
 RUN echo "deb http://deb.debian.org/debian $DEBIAN_VERSION-updates main non-free-firmware" >> /etc/apt/sources.list
