--- a/.github/workflows/build-debian-image.yml
+++ b/.github/workflows/build-debian-image.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           mv /tmp/build-modules/lib/modules/${{ inputs.kernel_version }}-steam ../boot/
           mv arch/arm/boot/zImage ../boot/
-          mv arch/arm/boot/dts/berlin2cd-valve-steamlink.dtb ../boot/
+          mv $(find . -name berlin2cd-valve-steamlink.dtb) ../boot/
           rm -rf ../boot/${{ inputs.kernel_version }}-steam/build
           rm -rf ../boot/${{ inputs.kernel_version }}-steam/source
 
