--- a/kernel/6.1.115.config
+++ b/kernel/6.1.115.config
@@ -915,7 +915,7 @@ CONFIG_NF_DEFRAG_IPV6=m
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 # CONFIG_L2TP is not set
-# CONFIG_BRIDGE is not set
+CONFIG_BRIDGE=y
 # CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_LLC2 is not set
