Add usb_net drivers

--- a/kernel/6.1.115.config
+++ b/kernel/6.1.115.config
@@ -1564,7 +1564,7 @@ CONFIG_MDIO_DEVRES=y
 
 # CONFIG_PPP is not set
 # CONFIG_SLIP is not set
-# CONFIG_USB_NET_DRIVERS is not set
+CONFIG_USB_NET_DRIVERS=y
 CONFIG_WLAN=y
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
 # CONFIG_WLAN_VENDOR_ATH is not set
