--- a/kernel/5.10.228.config
+++ b/kernel/5.10.228.config
@@ -1508,7 +1508,7 @@ CONFIG_MDIO_DEVRES=y
 
 # CONFIG_PPP is not set
 # CONFIG_SLIP is not set
-# CONFIG_USB_NET_DRIVERS is not set
+CONFIG_USB_NET_DRIVERS=y
 CONFIG_WLAN=y
 # CONFIG_WIRELESS_WDS is not set
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
