--- a/kernel/5.10.228.config
+++ b/kernel/5.10.228.config
@@ -2336,7 +2336,8 @@ CONFIG_USB_EZUSB_FX2=y
 # CONFIG_USB_ULPI is not set
 # end of USB Physical Layer drivers
 
-# CONFIG_USB_GADGET is not set
+CONFIG_USB_GADGET=y
+CONFIG_USB_G_NCM=y
 # CONFIG_TYPEC is not set
 CONFIG_USB_ROLE_SWITCH=y
 CONFIG_MMC=y
