enable additional usb-eth

--- a/kernel/5.10.228.config
+++ b/kernel/5.10.228.config
@@ -1509,6 +1509,9 @@ CONFIG_MDIO_DEVRES=y
 # CONFIG_PPP is not set
 # CONFIG_SLIP is not set
 CONFIG_USB_NET_DRIVERS=y
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_CDCETHER=y
+CONFIG_USB_ETH=y
 CONFIG_WLAN=y
 # CONFIG_WIRELESS_WDS is not set
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
